--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
@@ -55,7 +55,9 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/jinwei14/LPS-visualisation"><del>Github</del></a>
+                    <a class="nav-link" href="https://github.com/jinwei14/LPS-visualisation">
+                        <del>Github</del>
+                    </a>
                 </li>
 
                 <li class="nav-item">
@@ -87,48 +89,133 @@
 
         <p class="lead">
             -> This application contains a LPS javascript interpreter in <code>lps-1.0.16.bundle.js</code>
-        ,the loaded LPS program or the input LPS program will be interpreted via <code>lps-1.0.16.bundle.js</code>
+            ,the loaded LPS program or the input LPS program will be interpreted via <code>lps-1.0.16.bundle.js</code>
         </p>
 
         <p class="lead">
-            -> This application is using  <a href="https://github.com/jekyll/jekyll">Jekyll</a>, <a href="https://getbootstrap.com">bootstrap</a>
+            -> This application is using <a href="https://github.com/jekyll/jekyll">Jekyll</a>, <a
+                href="https://getbootstrap.com">bootstrap</a>
             for the front-end layout, and <a href="https://www.pixijs.com"> pixi.js </a> for the vehicle visualisation.
         </p>
 
         <p class="lead">
-            -> This application has restful API using express in Node.js. The server is hosting on amazon AWS EC2 webservice.
+            -> This application has restful API using express in Node.js. The server is hosting on amazon AWS EC2
+            webservice.
         </p>
 
         <p class="lead">
-        ->  All the LPS program are stored in <a href="https://www.mongodb.com">MongoDB</a>  and <a href="https://mongoosejs.com">Mongoose.js</a> . (This part is still under developed.)
+            -> All the LPS program are stored in <a href="https://www.mongodb.com">MongoDB</a> and <a
+                href="https://mongoosejs.com">Mongoose.js</a> . (This part is still under developed.)
         </p>
 
 
         <h2 class="mt-5">Instruction</h2>
-        <p class="lead">-> Start visualising your autonomous vehicle program by entering the lps program or by clicking on the choose file button to load the <code>.lps</code> file</p>
-        <p class="lead">-> Define the vehicle in your lps program or using  <code>+</code> or <code>-</code> button to add or delete a car. Mention that deletion during the program time will not modify the underlying LPS program</p>
+        <p class="lead">-> Start visualising your autonomous vehicle program by entering the lps program or by clicking
+            on the choose file button to load the <code>.lps</code> file</p>
+        <p class="lead">-> Define the vehicle in your lps program or using <code>+</code> or <code>-</code> button to
+            add or delete a car. Mention that deletion during the program time will not modify the underlying LPS
+            program</p>
         <p class="lead">-> Watch the behaviour of the vehicle by clicking the <code>Animate</code> button</p>
-        <p class="lead">-> Clear the program in the text area via <code>Clear</code> button. Clear the program by refreshing the page.</p>
+        <p class="lead">-> Clear the program in the text area via <code>Clear</code> button. Clear the program by
+            refreshing the page.</p>
 
         <h2 class="mt-5">LPS predicate</h2>
-        <p class="lead">Define street(fact) as: <code>street(StreetName, coordinate(X, Y), Width, Height, Number_of_lane)</code></p>
-        <p class="lead">Define location of vehicle(fluent) as: <code>location(Name_of_car, coordinate(X, Y), Direction)</code></p>
-        <p class="lead">Define traffic light(fluent) as: <code>trafficLight(coordinate(X, Y), Working_status, Color, FacingDirection)</code></p>
+        <p class="lead">Define street(fact) as: <code>street(StreetName, coordinate(X, Y), Width, Height,
+            Number_of_lane)</code></p>
+        <p class="lead">Define location of vehicle(fluent) as: <code>location(Name_of_car, coordinate(X, Y),
+            Direction)</code></p>
+        <p class="lead">Define traffic light(fluent) as: <code>trafficLight(coordinate(X, Y), Working_status, Color,
+            FacingDirection)</code></p>
         <p class="lead">Define the goal of the Vehicle(fluent) as: <code>goal(VehicleName,coordinate(X, Y))</code></p>
-        <p class="lead"> Each vehicle can have multiple state(fluent) eg <code>stopped(VehicleName)</code> or <code>moving(VehicleName)</code></p>
-        <p class="lead">Define the junction(fact) as: eg <code>junction(JunctionName,coordinate(A, B),coordinate(C, D),coordinate(E, F),coordinate(G, H)).</code> where (A, B), (C, D), (E, F), (G, H) are 4 different corners</p>
+        <p class="lead"> Each vehicle can have multiple state(fluent) eg <code>stopped(VehicleName)</code> or <code>moving(VehicleName)</code>
+        </p>
+        <p class="lead">Define the junction(fact) as: eg <code>junction(JunctionName,coordinate(A, B),coordinate(C,
+            D),coordinate(E, F),coordinate(G, H)).</code> where (A, B), (C, D), (E, F), (G, H) are 4 different corners
+        </p>
 
-        <p> Sample LPS programs are provided in  <a href="../index.html">home page</a></p>
+        <p> Sample LPS programs are provided in <a href="../index.html">home page</a></p>
 
         <h2 class="mt-5">Logic in traffic scenario</h2>
-        <p class="lead">
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-action ">
+                <img alt="one way drive" height="100" src="../imgs/webImg/oneway.png" width="300" align="centre">
+                <pre><code>
+                    !goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    drive(Vehicle).
+                </code><code>
+                    goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    arrive(Vehicle).
+                </code></pre>
+            </li>
+            <li class="list-group-item list-group-item-action ">
+                <img alt="one way drive" height="300" src="../imgs/webImg/T20.png" width="300">
+                <pre><code>
+                    !goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    drive(Vehicle).
+                </code><code>
+                    goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    arrive(Vehicle).
+                </code></pre>
+            </li>
+            <li class="list-group-item list-group-item-action ">
+                <img alt="one way drive" height="300" src="../imgs/webImg/T21.png" width="300">
+                <pre><code>
+                    !goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    drive(Vehicle).
+                </code><code>
+                    goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    arrive(Vehicle).
+                </code></pre>
+            </li>
+            <li class="list-group-item list-group-item-action ">
+                <img alt="one way drive" height="300" src="../imgs/webImg/T30.png" width="300">
+                <pre><code>
+                    !goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    drive(Vehicle).
+                </code><code>
+                    goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    arrive(Vehicle).
+                </code></pre>
+            </li>
+            <li class="list-group-item list-group-item-action ">
+                <img alt="3 cars in un controlled T junction" height="300" src="../imgs/webImg/T31.png" width="300">
+                <pre><code>
+                    !goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    drive(Vehicle).
+                </code><code>
+                    goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    arrive(Vehicle).
+                </code></pre>
+            </li>
 
-        </p>
+            <li class="list-group-item list-group-item-action ">
+                <img alt="cross junction drive with light" height="300" src="../imgs/webImg/crossJunc.png" width="300">
+                <pre><code>
+                    !goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    drive(Vehicle).
+                </code><code>
+                    goalHasBeenReached(Vehicle)
+                    ^ moving(Vehicle) ->
+                    arrive(Vehicle).
+                </code></pre>
+            </li>
+        </ul>
 
 
         <h2 class="mt-5">Developer setup</h2>
-        <p> For developer setup please refer to the  <a href="https://github.com/jinwei14/LPS-visualisation">github repo</a></p>
-
+        <p> For developer setup please refer to the <a href="https://github.com/jinwei14/LPS-visualisation">github
+            repo</a></p>
 
 
         <p>Back to <a href="../index.html">home page</a> to start visualise your LPS program.</p>
@@ -144,8 +231,14 @@
 </footer>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script crossorigin="anonymous"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script crossorigin="anonymous"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script crossorigin="anonymous"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
