--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
@@ -138,7 +138,7 @@
         <h2 class="mt-5">Logic in traffic scenario</h2>
         <ul class="list-group">
             <li class="list-group-item list-group-item-action ">
-                <img alt="one way drive" height="100" src="../imgs/webImg/oneway.png" width="300" align="centre">
+                <img alt="one way drive" height="100" src="../imgs/webImg/oneway.png" width="300">
                 <pre><code>
                     !goalHasBeenReached(Vehicle)
                     ^ moving(Vehicle) ->
