--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/login.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/login.html
@@ -11,7 +11,7 @@
     <link href="https://getbootstrap.com/docs/4.3/examples/floating-labels/" rel="canonical">
 
     <!-- Bootstrap core CSS -->
-    <link crossorigin="anonymous" href="../css/bootstrap.min.css"
+    <link crossorigin="anonymous" href="../css/bootstrap.css.map"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
     <style>
@@ -61,8 +61,15 @@
             <input type="checkbox" value="remember-me"> Remember me
         </label>
     </div>
+<!--    <div class=" mb-3">-->
+<!--        <label>-->
+<!--            <a href="">Register Here </a>-->
+<!--        </label>-->
+<!--    </div>-->
 
     <button class="btn btn-lg btn-primary btn-block" id="signinButton" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-secondary btn-block" id="signupButton" type="submit">Register</button>
+
     <p class="mt-5 mb-3 text-muted text-center">&copy;  Jinwei 2019</p>
 </form>
 
