build server tomorrow

--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/login.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/login.html
@@ -11,7 +11,7 @@
     <link href="https://getbootstrap.com/docs/4.3/examples/floating-labels/" rel="canonical">
 
     <!-- Bootstrap core CSS -->
-    <link crossorigin="anonymous" href="../css/bootstrap.css.map"
+    <link crossorigin="anonymous" href="../css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
     <style>
@@ -37,7 +37,7 @@
 <body>
 <form class="form-signin">
     <div class="text-center mb-4">
-        <img alt="" class="mb-4" height="86" src="../../logo/logo.png" width="195">
+        <img alt="" class="mb-4" height="86" src="../logo/logo.png" width="195">
 
         <p>Build form controls with floating labels via the <code>:placeholder-shown</code> pseudo-element. <a
                 href="https://caniuse.com/#feat=css-placeholder-shown">Works in latest Chrome, Safari, and Firefox.</a>
