--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
@@ -249,7 +249,7 @@
 
 <footer class="footer mt-auto py-2">
     <div class="container">
-        <img align="right" alt="img" height="35" src="../../logo/logo.png" width="80">
+        <img align="right" alt="img" height="35" src="../logo/logo.png" width="80">
         <span class="text-muted"> &copy; Author: Jinwei Zhang</span>
 
     </div>
