finish off all the front end design

--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/login.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/login.html
@@ -62,8 +62,9 @@
     <!--        </label>-->
     <!--    </div>-->
 
-    <button class="btn btn-lg btn-primary btn-block" id="signinButton" type="submit">Sign in</button>
-    <button class="btn btn-lg btn-secondary btn-block" id="signupButton" type="submit">Register</button>
+    <button class="btn btn-lg btn-primary btn-block" id="signinButton" type="submit">Sign in</button> <br>
+
+    No account? <a href="register.html">Register Here</a>
 
     <p class="mt-5 mb-3 text-muted text-center">&copy; Jinwei 2019</p>
 </form>
