front end finishing

--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/login.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/login.html
@@ -30,7 +30,7 @@
 
 </head>
 <body>
-<form class="form-signin">
+<form class="form-signin" action="../index.html" >
     <div class="text-center mb-4">
         <img alt="" class="mb-4" height="86" src="../logo/logo.png" width="195">
 
