--- a/Jinwei_Zhang/PassportAuthenticationLearning/public/index.html
+++ b/Jinwei_Zhang/PassportAuthenticationLearning/public/index.html
@@ -41,13 +41,13 @@
 
     <!--This is the input email address.-->
     <div class="form-label-group">
-        <input autofocus class="form-control" id="inputEmail" placeholder="Email address" required type="email">
+        <input autofocus class="form-control" id="inputEmail" name='email' placeholder="Email address" required type="email">
         <label for="inputEmail">Email address</label>
     </div>
 
     <!--This is the input password.-->
     <div class="form-label-group">
-        <input class="form-control" id="inputPassword" placeholder="Password" required type="password">
+        <input class="form-control" id="inputPassword" name='password' placeholder="Password" required type="password">
         <label for="inputPassword">Password</label>
     </div>
 
