front end adding stop function

--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -94,6 +94,7 @@
 
                 <div id="output"></div>
                 <button class="btn btn-primary btn-lg" id="AnimateButton" type="button">Animate</button>
+                <button class="btn btn-danger btn-lg" id="StopButton" type="button">Stop</button>
                 <button class="btn btn-secondary btn-lg" id="ClearButton" type="button">Clear</button>
             </div>
         </div>
