front end side button added

--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -134,6 +134,7 @@
                         <p>> Define the vehicle in your lps program or via  <code>+</code> or <code>-</code> button</p>
                         <p>> Watch the behaviour of the vehicle by clicking the <code>Animate</code> button</p>
                         <p>> Clear the program via <code>Clear</code> button</p>
+                        <p>> Stop the running program via <code>Stop</code> button</p>
                         <hr>
                         <p class="mb-0">This project is under MIT license, For further instruction and traffic regulations, please refer to the <a href="./links/aboutus.html">About</a>  page</p>
                     </div>
