goal modifier done

--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -114,7 +114,7 @@
                             <th scope="col">Destination</th>
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody >
                         <!--                        <tr>-->
                         <!--                            <th scope="row">0</th>-->
                         <!--                            <td><span contenteditable id="V0">#####</span></td>-->
@@ -127,6 +127,7 @@
                         <!--                        </tr>-->
                         </tbody>
                     </table>
+                    <button  type="button" class="btn btn-outline-primary btn-sm" id = "changeTableContent" >Confirm</button>
 
                     <div class="alert alert-success" role="alert">
                         <h4 class="alert-heading">Welcome to LPS visualiser</h4>
